[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brewbar"
version = "2.0.0"
description = "A progress bar for Python — tqdm-compatible API plus extras (predictive ETA, memory/CPU monitoring, sparklines, hooks, multi-bar groups, logging integration)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Harish", email = "snharish85@gmail.com" }
]

keywords = [
    "progress",
    "progress-bar",
    "progressbar",
    "tqdm",
    "terminal",
    "cli",
    "eta",
    "monitoring",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
monitoring = ["psutil>=5.0"]
pandas = ["pandas>=1.0"]
all = ["psutil>=5.0", "pandas>=1.0"]

[project.urls]
Homepage = "https://github.com/Harish-SN/brewbar"
Repository = "https://github.com/Harish-SN/brewbar"
Issues = "https://github.com/Harish-SN/brewbar/issues"

[tool.hatch.build.targets.wheel]
packages = ["brewbar"]